[gd_scene load_steps=7 format=3 uid="uid://ch36guisgumx6"]

[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://assets/themes/FlatUI4/kenneyUI.tres" id="1_y7k74"]
[ext_resource type="Script" uid="uid://bsyklq2q1cgjg" path="res://title.gd" id="2_oyqm6"]

[sub_resource type="LabelSettings" id="LabelSettings_y7k74"]
font_size = 48
font_color = Color(0.9654923, 0.6385655, 0.3428182, 1)

[sub_resource type="Gradient" id="Gradient_y7k74"]
offsets = PackedFloat32Array(0, 0.5031056, 1)
colors = PackedColorArray(0.8213309, 0.57603717, 0.73405224, 1, 0.19597459, 0.5417247, 0.8619595, 1, 0.6108265, 0.72219, 0.4433825, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 43

[sub_resource type="FastNoiseLite" id="FastNoiseLite_oyqm6"]
noise_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kpexm"]
width = 70
height = 70
generate_mipmaps = false
noise = SubResource("FastNoiseLite_oyqm6")
color_ramp = SubResource("Gradient_y7k74")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y7k74")
script = ExtResource("2_oyqm6")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="AspectRatioContainer"]
layout_mode = 2
color = Color(0.9270759, 0.93282884, 0.8127683, 1)

[node name="Title" type="Label" parent="AspectRatioContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
text = "Pong"
label_settings = SubResource("LabelSettings_y7k74")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.728754, 0.43981424, 0.42501602, 1)
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "PO[color=green]N[/color]G"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Button" type="Button" parent="AspectRatioContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Press to start game"
theme_override_colors/font_outline_color = Color(0.6776511, 0.16028735, 0.39561415, 1)
theme_override_constants/outline_size = 10
theme_override_constants/h_separation = 20
theme_override_font_sizes/font_size = 90
text = "Start"
icon = SubResource("NoiseTexture2D_kpexm")
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="AspectRatioContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="FoldableContainer" type="FoldableContainer" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_vertical = 8
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/FoldableContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer/FoldableContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LinkButton" type="LinkButton" parent="AspectRatioContainer/FoldableContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "http://www.wetsnow.com"
uri = "http://www.wetsnow.com"

[node name="PanelContainer" type="PanelContainer" parent="AspectRatioContainer/FoldableContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="AspectRatioContainer/FoldableContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
color = Color(0.44515556, 0.7473416, 0.9787448, 1)

[node name="LineEdit" type="LineEdit" parent="AspectRatioContainer/FoldableContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
placeholder_text = "Type some text here..."
alignment = 1

[connection signal="scene_loaded" from="." to="." method="_on_scene_loaded"]
[connection signal="pressed" from="AspectRatioContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
